<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryappudacity.Add">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark" />
    <TextView
        style="@style/Text"
        android:text="@string/name"/>
    <EditText
        android:id="@+id/itemNameEditText"
       style="@style/EditText"
        android:hint="@string/item_name"
       />
    <TextView
        style="@style/Text"
        android:text="@string/descriptionText"/>
    <EditText
        android:id="@+id/itemDesciptionEditText"
        style="@style/EditText"
        android:hint="@string/description"
        />
    <TextView
        style="@style/Text"
        android:text="@string/Textprice"/>
    <EditText
        android:id="@+id/PriceEditText"
        style="@style/EditText"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        />
    <TextView
        style="@style/Text"
        android:text="@string/Textquantity"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/QuantityEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:layout_marginStart="@dimen/EditMargin"
        android:inputType="numberSigned"
        android:layout_weight="4"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/plus"
        android:id="@+id/plus"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus"
            android:id="@+id/minus"/></LinearLayout>
    <TextView
        style="@style/Text"
        android:text="@string/Textsupplier"/>
    <EditText
        android:id="@+id/SupplierName"
        style="@style/EditText"
        android:hint="@string/supplier"
        />
    <TextView
        style="@style/Text"
        android:text="@string/suplier_phone_numberText"/>
    <EditText
        android:id="@+id/SupplierPhone"
        style="@style/EditText"
        android:hint="@string/supplier_phone_number"
        android:inputType="phone"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/call"
        android:id="@+id/phone"
        android:layout_gravity="center"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginFab"
        android:src="@drawable/ic_edit"/>
</LinearLayout>
</ScrollView>